# quanta_ethos

./: CMakeLists.txt  README.md  build_all.sh  main.cpp  prismquanta.env  start_system.sh  test_all.sh
docs/: activity_profile.md  agentic_challenges.md  agentic_model_challenges.md  ai_philosophy.md  ai_psychology.md  ai_science.md  ai_tool_preference.md  api_reference.md  architecture.md  behavior_profile.md  binary_file_management.md  binary_file_management2.md  binary_file_management3.md  binary_file_management4.md  binary_file_management5.md  binary_file_management6.md  binary_file_management7.md  binary_file_management8.md  binary_file_management9.md  coding_style.md  deployment_guide.md  developer_guide.md  disclaimer.md  documentation_plan.md  documentation_roadmap.md  enhancement_suggestions.md  ethical_checkpoints.md  ethics_and_collaboration_framework.md  index.html  integration_policy.md  interaction_mode_policy.md  m2m_interaction_policy.md  monitoring.md  resource_management.md  safety_controls.md  security.md  tisslang_grammar.ebnf  troubleshooting.md  vision.md
docs/css/: style.css
docs/js/: main.js
examples/: 01_simple_pipeline.tiss  02_full_flow.tiss
include/: core_engine.h  model_backend.h
src/: CMakeLists.txt  core_engine.cpp  main.cpp  model_backend.cpp
src/QuantaEthos/: ethics_logic.cpp  ethics_logic.h  main.cpp
